# FileIntel

./: .dockerignore  .env  .env.example  .env.template  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  .sync.ffs_db  .~lock.collection_metadata.csv#  API_DOCUMENT_EXPORT.md  API_REFERENCE.md  API_USAGE.md  CELERY_ARCHITECTURE.md  CHUNKING_IMPROVEMENT_PLAN.md  CHUNKING_PIPELINE_ANALYSIS.md  CITATION_IMPLEMENTATION_COMPLETE.md  CITATION_PAGE_NUMBER_IMPLEMENTATION_PLAN.md  CLI_DOCUMENT_EXPORT.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_REQUIRED.md  DATABASE_MIGRATIONS.md  DEPENDENCY_MANAGEMENT.md  DOCUMENT_EXPORT_COMPLETE.md  Dockerfile  EXPORT_CHUNKS_USAGE.md  FINAL_FIXES_APPLIED.md  FINAL_STALE_TASK_ANALYSIS.md  FINGERPRINT_IMPLEMENTATION_PLAN.md  FINGERPRINT_IMPLEMENTATION_SUMMARY.md  FINGERPRINT_TESTING_GUIDE.md  FIXES_APPLIED.md  FIXES_DIFF.md  GEVENT_DEPLOYMENT_GUIDE.md  GEVENT_HIGH_MEMORY_CONFIG.md  GEVENT_IMPLEMENTATION_PLAN.md  GEVENT_IMPLEMENTATION_SUMMARY.md  GRAPHRAG_API.md  GRAPHRAG_CHUNKING_INTEGRATION_ANALYSIS.md  GRAPHRAG_CLI_FIX_APPLIED.md  (+81 more)
.claude/: settings.local.json
config/: default.yaml  default.yaml.example
docs/: API_REFERENCE.md  CELERY_WORKER_CONFIGURATION.md  FORK_MEMORY_OPTIMIZATION.md  MEMORY_MONITORING.md  README.md  Rebuild_communities.md  WORKER_PERFORMANCE_FIX.md  api_blocking_analysis.md  api_blocking_fix_applied.md  architecture.md  asyncio_to_thread_safety_analysis.md  batch_operations_pipeline_analysis.md  bugfix_celery_workflow_issues.md  bugfix_graphrag_embedding_resilience.md  celery_5_chord_fix.md  checkpoint_implementation_review.md  chunking_issues_investigation.md  collection_status_tracking_analysis.md  concurrency_configuration_standard.md  existing_prompts_backup.md  graphrag_checkpoint_resume_plan.md  graphrag_concurrency_bottleneck_analysis.md  graphrag_embedding_todo.md  graphrag_pipeline_analysis_comprehensive.md  graphrag_query_failure_analysis.md  improved_error_logging.md  markdown_metadata_enhancement.md  metadata_extraction_pipeline_analysis.md  mineru_backend_comparison_report.md  mineru_backend_fix.md  mineru_backend_quality_comparison.md  mineru_backend_selection_implemented.md  mineru_migration_plan.md  mineru_output_saving.md  mineru_pipeline_analysis.md  mineru_structure_pipeline_reanalysis.md  mineru_structure_plan_compatibility_assessment.md  mineru_structure_utilization_analysis.md  pipeline_analysis_issues.md  session_work_summary.md  (+2 more)
docs/adr/: README.md  (+5 more)
logs/: processing_log
migrations/: alembic.ini  env.py
scripts/: GRAPHRAG_HIERARCHY_OPTIMIZER.md  README.md  backfill_content_fingerprints.py  backfill_graphrag_database.py  batch_process_files.py  cleanup_duplicates.py  create_migration.py  export_communities.py  export_document_chunks.py  init_db.py  memory_report.py  migration_manager.py  monitor_worker_memory.sh  optimize_graphrag_hierarchy.py  preview_prompt.py  replicate_api_prompt.py  reset_graphrag_status.py  restore_db.sh  rollback_migration.py  run_docker_tests.sh  run_migration.py  run_migrations.py  setup_test_database.py  test_celery_workflow.py  test_environment_setup.py  test_markdown_metadata.py  test_mineru_integration.py
src/: __init__.py  graphrag_api.md  pipeline.md  pipeline_review_todo.md
temp/: models.py  utils.py
tests/: TEST_GUIDE.md  conftest.py  test_celery_config.py  test_checkpoint_validation.py
(+343 files in other folders)
